<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="56dp"
            android:layout_width="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_back_android"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="56dp"
                    android:layout_marginBottom="17dp"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.01"
                    android:text="@string/payment_of_services"
                    android:textColor="#08111f"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <include
                layout="@layout/card"
                android:layout_width="280dp"
                android:layout_height="152dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"></include>
        </android.support.constraint.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/Recipient"
                    android:textColor="#08111f"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="8sp"
                    android:textColor="#08111f"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Авиакомпания" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="72dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="272dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/logo_belavia"
                    app:layout_constraintBottom_toTopOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/YNP_recipient"
                    android:textColor="#08111f"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/YNP_num"
                    android:textColor="#08111f"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/payees_bank"
                    android:textColor="#08111f"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/Priorbank"
                    android:textColor="#08111f"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="10sp"
                    android:textColor="#08111f"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView14"
                    tools:text="Счет получателя" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/bill"
                    android:textColor="#08111f"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/purpose_of_payment"
                    android:textColor="#08111f"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/Num_ticket"
                    android:textColor="#08111f"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/Total_amount"
                    android:textColor="#08111f"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/byn"
                    android:textColor="#08111f"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="328dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_yellow"
                    android:text="@string/Pay"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />
            </android.support.constraint.ConstraintLayout>

        </FrameLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>