<?xml version="1.0" encoding="utf-8"?>



<android.widget.FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/consrtLayoutCard3">
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/byn"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="76dp"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0.08"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/card_number"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="38dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="226dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/visa" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/Salary_card"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/dataCard"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>
    </android.support.constraint.ConstraintLayout>


</android.widget.FrameLayout>






