<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Imprint">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="232dp"
            android:layout_height="24dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="390dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="178dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/fingerprint_input" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="232dp"
            android:layout_height="24dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="528dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/signIn" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="232dp"
            android:layout_height="24dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="480dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/login_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="114dp"
            android:layout_height="166dp"
            android:layout_marginStart="123dp"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="123dp"
            android:layout_marginRight="123dp"
            android:layout_marginBottom="218dp"
            android:src="@drawable/finger_print"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>