<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:toolbarId="@+id/toolbar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"></android.support.v7.widget.Toolbar>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/backFromPaymentResult"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="320dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/ic_back_android"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="72dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="56dp"
                        android:layout_marginBottom="17dp"
                        android:fontFamily="sans-serif-medium"
                        android:letterSpacing="0.01"
                        android:text="@string/Result_payment"
                        android:textColor="#08111f"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f7f7f7"

            tools:context=".PaymentResult">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="104dp"
                    android:layout_height="104dp"
                    android:layout_marginStart="128dp"
                    android:layout_marginLeft="128dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="128dp"
                    android:layout_marginRight="128dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_success_merch"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="160dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/payment_was_successfull"
                    android:textColor="#3ea00f"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="224dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="264dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/Payment_an_ticket"
                    android:textColor="#262104"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="248dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="240dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="8sp"
                    android:textColor="#262104"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2458488349123" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="296dp"
                    android:layout_marginEnd="46dp"
                    android:layout_marginBottom="188dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="0sp"
                    android:text="600,00 BYN"
                    android:textColor="#262104"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bt_back_toStore"
                    android:layout_width="328dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_yellow"
                    android:text="@string/Return_to_the_store"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="328dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="384dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="80dp"
                    android:background="@drawable/button_gray"
                    android:text="@string/check"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>